plugins {
    id 'maven-publish'
    id 'signing'
    id 'org.flywaydb.flyway' version '10.17.3'
    id 'nu.studer.jooq' version '8.2.3'
    id 'io.spring.dependency-management' version "${springDependencyManagementVersion}"

    id 'org.ajoberstar.grgit' version '5.2.0'
    id 'io.github.gradle-nexus.publish-plugin' version '2.0.0'
}

subprojects {
    apply plugin: 'java'
    apply plugin: 'io.spring.dependency-management'
    apply plugin: 'java-library'

    repositories {
        mavenLocal()
        mavenCentral()
        maven {
            url "https://central.sonatype.com/repository/maven-snapshots/"
        }
    }

    if (project.name == "all") {
        archivesBaseName = 'yaci-store';
    } else
        archivesBaseName = 'yaci-store-' + project.name

    def commit_id=getCheckedOutGitCommitHash()
    if (project.version.endsWith("-SNAPSHOT")) {
        version = "${project.version}".replace("-SNAPSHOT", "-${commit_id}-SNAPSHOT")
    }

    plugins.withId('com.gorylenko.gradle-git-properties') {
        gitProperties {
            failOnNoGitDirectory = false
            // In git worktrees, .git is a file pointing to the real git dir.
            // JGit may not resolve this, so point to the main repo's .git directory.
            def dotGit = rootProject.file('.git')
            if (dotGit.isFile()) {
                def gitDirLine = dotGit.text.trim()
                def mainGitDir = file(gitDirLine.replace('gitdir: ', '')).parentFile.parentFile
                dotGitDirectory = mainGitDir
            }
        }
    }

    dependencyManagement {
        imports {
            mavenBom("org.springframework.boot:spring-boot-dependencies:${springBootVersion}")
            mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
        }
    }

    dependencies {
        compileOnly 'org.projectlombok:lombok'
        implementation(libs.mapstruct)
        annotationProcessor 'org.projectlombok:lombok'
        annotationProcessor(libs.mapstruct.processor)
        testImplementation 'org.springframework.boot:spring-boot-starter-test'
        testImplementation 'io.projectreactor:reactor-test'
    }

    compileJava {
        sourceCompatibility = '21'
        targetCompatibility = '21'

        options.compilerArgs += ["-Aproject=${project.group}/${project.name}", "-parameters"]
    }

    tasks.withType(Javadoc) {
        options.encoding = 'UTF-8'
    }

    task sourceJar(type: Jar) {
        from sourceSets.main.allSource
        archiveClassifier.set('sources')
    }

    task javadocJar(type: Jar) {
        from javadoc
        archiveClassifier.set('javadoc')
    }

//    task sourceJar(type: Jar) {
////        archiveClassifier "sources"
//        from sourceSets.main.allJava
//    }

//    task javadocJar(type: Jar, dependsOn: javadoc) {
////        archiveClassifier "javadoc"
//        from javadoc.destinationDir
//    }

    artifacts {
        archives jar
        archives sourceJar
        archives javadocJar
    }

    test {
        useJUnitPlatform()
    }
}

def mavenCentralPublicationProjects = {
    allprojects.findAll { candidate ->
        def publishing = candidate.extensions.findByType(org.gradle.api.publish.PublishingExtension)
        publishing != null && publishing.publications.findByName('mavenJava') != null
    }
}

tasks.register('validateMavenCentralArtifacts') {
    group = 'verification'
    description = 'Verifies that each Maven Central publication has a POM, sources JAR, and javadoc JAR.'

    doLast {
        def errors = []

        mavenCentralPublicationProjects().each { publishedProject ->
            def publishing = publishedProject.extensions.findByType(org.gradle.api.publish.PublishingExtension)
            def publication = publishing.publications.findByName('mavenJava')

            def expectedFiles = [
                    pom    : publishedProject.layout.buildDirectory.file("publications/${publication.name}/pom-default.xml").get().asFile,
                    jar    : publishedProject.tasks.named('jar').get().archiveFile.get().asFile,
                    sources: publishedProject.tasks.named('sourceJar').get().archiveFile.get().asFile,
                    javadoc: publishedProject.tasks.named('javadocJar').get().archiveFile.get().asFile
            ]

            expectedFiles.each { type, artifactFile ->
                if (!artifactFile.isFile()) {
                    errors << "${publishedProject.path}:${publication.name} missing ${type} artifact: ${artifactFile}"
                } else if (artifactFile.length() == 0) {
                    errors << "${publishedProject.path}:${publication.name} has empty ${type} artifact: ${artifactFile}"
                }
            }
        }

        if (!errors.isEmpty()) {
            throw new GradleException("Maven Central publication validation failed:\n - " + errors.join("\n - "))
        }
    }
}

gradle.projectsEvaluated {
    tasks.named('validateMavenCentralArtifacts') {
        mavenCentralPublicationProjects().each { publishedProject ->
            dependsOn publishedProject.tasks.named('jar')
            dependsOn publishedProject.tasks.named('sourceJar')
            dependsOn publishedProject.tasks.named('javadocJar')
            dependsOn publishedProject.tasks.named('generatePomFileForMavenJavaPublication')
        }
    }
}

def commit_id=getCheckedOutGitCommitHash()
def final_version = project.version
if (project.version.endsWith("-SNAPSHOT")) {
    final_version = "${project.version}".replace("-SNAPSHOT", "-${commit_id}-SNAPSHOT")
}

task distZip(type: Zip) {
    dependsOn ':components:plugin-polyglot:build', ':applications:all:bootJar', ':applications:ledger-state:bootJar', ':applications:admin-cli:bootJar'

    if (gradle.taskGraph.hasTask(distZip)) {
        dependsOn build
    }

    print(final_version)

    def zipDirName ="yaci-store-${final_version}"
    def configDir = "config"
    def binDir = "bin"

    from('applications/all/build/libs') {
        include "yaci-store-${final_version}.jar"
        into(zipDirName)
        rename "yaci-store-${final_version}.jar", "yaci-store.jar"
    }

    from('applications/ledger-state/build/libs') {
        include "yaci-store-ledger-state-${final_version}.jar"
        into(zipDirName)
        rename "yaci-store-ledger-state-${final_version}.jar", "yaci-store-ledger-state.jar"
    }

    from('applications/admin-cli/build/libs') {
        include "yaci-store-admin-cli-${final_version}.jar"
        into(zipDirName)
        rename "yaci-store-admin-cli-${final_version}.jar", "yaci-store-admin-cli.jar"
    }

    from('components/plugin-polyglot/build/libs') {
        include "yaci-store-plugin-polyglot-${final_version}.jar"
        into(zipDirName + "/" + 'plugins')
        rename "yaci-store-plugin-polyglot-${final_version}.jar", "yaci-store-plugin-polyglot.jar"
    }

    from('components/plugin-polyglot/build/libs/plugin-libs') {
        include "*.jar"
        into(zipDirName + "/" + 'plugins/lib')
    }

    from('./docker/plugins/scripts') {
        into zipDirName + '/plugins/scripts'
    }

    from('./docker/plugins/ext-jars') {
        into zipDirName + '/plugins/ext-jars'
    }

    from('./') {
        into(zipDirName)
        include 'LICENSE'
    }

    from('./config') {
        include 'application.properties'
        include 'application-analytics.properties'
        include 'application-blockfrost.properties'
        include 'application-custom-exporters.yml'
        include 'application-ledger-state.properties'
        include 'application-plugins.yml'
        into zipDirName + '/' + configDir
    }

    from('./bin') {
        include("*.sh", "*.bat")
        into zipDirName + '/' + binDir
        eachFile { file ->
            if (file.name.endsWith(".sh")) {
                file.mode = 0b111101101  // 755 in octal
            }
        }
    }

    archiveFileName = "yaci-store-${final_version}.zip"

    destinationDirectory = file("applications/build/dist")
}

task dockerZip(type: Zip) {
    def zipDirName ="yaci-store-docker-${final_version}"

    from('./') {
        into(zipDirName)
        include 'LICENSE'
    }

    from('./docker') {
        into(zipDirName)
        include 'README.md'
        include '*.sh'
    }

    from('./docker/compose') {
        into(zipDirName + '/compose')
        include '*.yml'
        include '.env'
    }

    from('./docker/config') {
        into(zipDirName + '/config')
        include 'env'
        include 'application.properties'
        include 'application-blockfrost.properties'
        include 'application-ledger-state.properties'
        include 'application-plugins.yml'
        include 'application-analytics.properties'
        include 'application-custom-exporters.yml'
    }

    from('./docker/plugins') {
        into zipDirName + '/plugins'
    }

    from('./docker/grafana') {
        exclude('data')
        into zipDirName + '/grafana'
    }

    from('./docker/prometheus') {
        include 'prometheus.yml'
        into zipDirName + '/prometheus'
    }

    archiveFileName = "yaci-store-docker-${final_version}.zip"

    destinationDirectory = file("applications/build/dist")
}

def getCheckedOutGitCommitHash() {
    try {
        grgit.head().abbreviatedId
    } catch (Exception e) {
        // Fallback for git worktrees where grgit may not resolve properly
        'git rev-parse --short HEAD'.execute(null, project.rootDir).text.trim()
    }
}

ext.ossrhUsername = System.getenv('MAVEN_USERNAME')
ext.ossrhPassword = System.getenv('MAVEN_PASSWORD')

nexusPublishing {
    def githubRunId = System.getenv('GITHUB_RUN_ID')
    if (githubRunId) {
        def githubRunAttempt = System.getenv('GITHUB_RUN_ATTEMPT') ?: '1'
        repositoryDescription.set("${project.group}:${project.name}:${project.version}:${githubRunId}:${githubRunAttempt}")
    }

    repositories {
        sonatype {
            nexusUrl.set(uri("https://ossrh-staging-api.central.sonatype.com/service/local/"))
            snapshotRepositoryUrl.set(uri("https://central.sonatype.com/repository/maven-snapshots/"))
            username = ossrhUsername
            password = ossrhPassword
        }
    }
    clientTimeout = java.time.Duration.ofMinutes(30)
    connectTimeout = java.time.Duration.ofMinutes(5)
    transitionCheckOptions {
        maxRetries.set(60)
        delayBetween.set(java.time.Duration.ofSeconds(10))
    }
}
